--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Build Container Image
+
+    - name: Build Image
       run: mvn -B spring-boot:build-image -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo
-    - name: Push Container Image
+
+    - name: Login to Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Push Image
       run: docker push ghcr.io/marknazareno/spring-boot-demo:latest
