--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,32 +5,52 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
-    packages: write
+  packages: write
+
+env:
+  IMAGE_TAG: ${{ github.sha }}-${{ github.job }}
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: "11"
+          distribution: "adopt"
 
-    - name: Build Image
-      run: mvn -B spring-boot:build-image -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo
+      - name: Build Image
+        run: mvn -B spring-boot:build-image -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }}
 
-    - name: Login to Registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Login to Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Push Image
-      run: docker push ghcr.io/marknazareno/spring-boot-demo:latest
+      - name: Push Image
+        run: docker push ghcr.io/marknazareno/spring-boot-demo
+
+      - name: Checkout GitOps File
+        uses: actions/checkout@v2
+        with:
+          repository: marknazareno/gitops-apps-prod
+          path: spring-boot-demo
+
+      - name: Update YAML
+        uses: mikefarah/yq
+        run: yq eval '.images[0].newTag="${{ env.IMAGE_TAG }}"' -i kustomization.yaml
+
+      - uses: actions/checkout@v2
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "update spring-boot-demo to ${{ env.IMAGE_TAG }}"
+          git push
