--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,11 +43,14 @@ jobs:
           repository: marknazareno/gitops-apps-prod
           path: spring-boot-demo
 
-      - name: Update YAML
+      - name: Set up yq
         uses: mikefarah/yq
+
+      - name: update yaml
         run: yq eval '.images[0].newTag="${{ env.IMAGE_TAG }}"' -i kustomization.yaml
 
       - uses: actions/checkout@v2
+      - name: commit updated yaml
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
