--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ permissions:
   packages: write
 
 env:
-  IMAGE_TAG: ${{ github.sha }}-${{ github.job }}
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build:
