--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push Image
-        run: docker push ghcr.io/marknazareno/spring-boot-demo
+        run: docker push ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }}
 
       - name: Checkout GitOps File
         uses: actions/checkout@v2
