--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,15 +41,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: marknazareno/gitops-apps-prod
-          path: spring-boot-demo
+          path: gitops-apps-prod
 
       - name: Set up yq
         uses: mikefarah/yq@v4.9.3
         with:
-          cmd: yq eval '.images[0].newTag="${{ env.IMAGE_TAG }}"' -i kustomization.yaml
+          cmd: yq eval '.images[0].newTag="${{ env.IMAGE_TAG }}"' -i gitops-apps-prod/spring-boot-demo/kustomization.yaml
 
-      - uses: actions/checkout@v2
       - name: commit updated yaml
+        working-directory: ./gitops-apps-prod
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
