--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,26 @@ on:
 permissions:
   packages: write
 
-env:
-  IMAGE_TAG: ${{ github.sha }}
-
 jobs:
   build-push-update-gitops:
     runs-on: ubuntu-latest
 
     steps:
+      - id: vars
+        shell: bash
+        run: |
+          echo "::set-output name=BRANCH::${GITHUB_REF#refs/heads/}"
+          echo "BRANCH=${GITHUB_REF#refs/heads/}" >> GITHUB_ENV
+          echo "::set-output name=COMMIT_SHA::${GITHUB_SHA:0:7}"
+          echo "COMMIT_SHA=${GITHUB_SHA:0:7}" >> GITHUB_ENV
+          echo "IMAGE_TAG=${GITHUB_SHA:0:7}-$GITHUB_RUN_ID" >> GITHUB_ENV
+
+      - shell: bash
+        run: |
+          echo "BRANCH=$BRANCH, ${{ env.BRANCH }}, ${{ steps.vars.outputs.BRANCH }}"
+          echo "COMMIT_SHA=$COMMIT_SHA ${{ env.COMMIT_SHA }}, ${{ steps.vars.outputs.COMMIT_SHA }}"
+          echo "IMAGE_TAG=IMAGE_TAG ${{ env.IMAGE_TAG }}"
+
       - uses: actions/checkout@v2
 
       - name: Set up JDK 11
@@ -82,31 +94,7 @@ jobs:
         working-directory: ./gitops-apps-prod
         run: |
           git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.email github-actions@marknazareno.com
           git add .
           git commit -m "update spring-boot-demo to ${{ env.IMAGE_TAG }}"
           git push
-
-#  build-with-paketo-push-2-ghcr:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 11
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: "11"
-#          distribution: "adopt"
-#
-#      - name: Login to Container Registry
-#        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-#
-#      - name: Install pack CLI via the official buildpack Action https://github.com/buildpacks/github-actions#setup-pack-cli-action
-#        uses: buildpacks/github-actions/setup-pack@v4.1.1
-#
-#      - name: Build app with pack CLI using Buildpack Cache image (see https://buildpacks.io/docs/app-developer-guide/using-cache-image/) & publish to Docker Hub
-#        run: |
-#          pack build ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }} \
-#              --builder paketobuildpacks/builder:0.1.113-base \
-#              --path . \
-#              --cache-image ghcr.io/marknazareno/spring-boot-demo-cache:latest \
-#              --publish
