feat: add build info

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,20 +17,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - id: vars
+      - name: Set variables
+        id: vars
         shell: bash
         run: |
           echo "::set-output name=BRANCH::${GITHUB_REF#refs/heads/}"
           echo "BRANCH=${GITHUB_REF#refs/heads/}" >> GITHUB_ENV
           echo "::set-output name=COMMIT_SHA::${GITHUB_SHA:0:7}"
           echo "COMMIT_SHA=${GITHUB_SHA:0:7}" >> GITHUB_ENV
+          echo "::set-output name=IMAGE_TAG::${GITHUB_SHA:0:7}-$GITHUB_RUN_ID"
           echo "IMAGE_TAG=${GITHUB_SHA:0:7}-$GITHUB_RUN_ID" >> GITHUB_ENV
 
-      - shell: bash
+      - name: Echo variables
+        shell: bash
         run: |
           echo "BRANCH=$BRANCH, ${{ env.BRANCH }}, ${{ steps.vars.outputs.BRANCH }}"
-          echo "COMMIT_SHA=$COMMIT_SHA ${{ env.COMMIT_SHA }}, ${{ steps.vars.outputs.COMMIT_SHA }}"
-          echo "IMAGE_TAG=IMAGE_TAG ${{ env.IMAGE_TAG }}"
+          echo "COMMIT_SHA=$COMMIT_SHA, ${{ env.COMMIT_SHA }}, ${{ steps.vars.outputs.COMMIT_SHA }}"
+          echo "IMAGE_TAG=$IMAGE_TAG, ${{ env.IMAGE_TAG }}, ${{ steps.vars.outputs.IMAGE_TAG }}"
 
       - uses: actions/checkout@v2
 
