--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,11 @@ jobs:
         shell: bash
         run: |
           echo "::set-output name=BRANCH::${GITHUB_REF#refs/heads/}"
-          echo "BRANCH=${GITHUB_REF#refs/heads/}" >> GITHUB_ENV
+          echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
           echo "::set-output name=COMMIT_SHA::${GITHUB_SHA:0:7}"
-          echo "COMMIT_SHA=${GITHUB_SHA:0:7}" >> GITHUB_ENV
+          echo "COMMIT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
           echo "::set-output name=IMAGE_TAG::${GITHUB_SHA:0:7}-$GITHUB_RUN_ID"
-          echo "IMAGE_TAG=${GITHUB_SHA:0:7}-$GITHUB_RUN_ID" >> GITHUB_ENV
+          echo "IMAGE_TAG=${GITHUB_SHA:0:7}-$GITHUB_RUN_ID" >> $GITHUB_ENV
 
       - name: Echo variables
         shell: bash
