--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [main]
+    branches: [main,develop]
   pull_request:
-    branches: [main]
+    branches: [main,develop]
 
 permissions:
   packages: write
@@ -62,7 +62,10 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Image
-        run: mvn -B package -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }}
+        run: |
+          mvn -B deploy \
+          -DaltDeploymentRepository=github:https://maven.pkg.github.com/marknazareno/spring-boot-demo
+          -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }}
 
       - name: Login to Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
