--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,32 +9,23 @@ on:
   pull_request:
     branches: [main,develop]
 
-permissions:
-  contents: read
-  packages: write
+
 
 jobs:
   build-push-update-gitops:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Set variables
         id: vars
         shell: bash
         run: |
-          echo "::set-output name=BRANCH::${GITHUB_REF#refs/heads/}"
           echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "::set-output name=COMMIT_SHA::${GITHUB_SHA:0:7}"
           echo "COMMIT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
-          echo "::set-output name=IMAGE_TAG::${GITHUB_SHA:0:7}-$GITHUB_RUN_ID"
           echo "IMAGE_TAG=${GITHUB_SHA:0:7}-$GITHUB_RUN_ID" >> $GITHUB_ENV
-
-      - name: Echo variables
-        shell: bash
-        run: |
-          echo "BRANCH=$BRANCH, ${{ env.BRANCH }}, ${{ steps.vars.outputs.BRANCH }}"
-          echo "COMMIT_SHA=$COMMIT_SHA, ${{ env.COMMIT_SHA }}, ${{ steps.vars.outputs.COMMIT_SHA }}"
-          echo "IMAGE_TAG=$IMAGE_TAG, ${{ env.IMAGE_TAG }}, ${{ steps.vars.outputs.IMAGE_TAG }}"
 
       - uses: actions/checkout@v2
 
@@ -67,6 +58,8 @@ jobs:
           mvn -B deploy \
           -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marknazareno/spring-boot-demo
           -Dspring-boot.build-image.imageName=ghcr.io/marknazareno/spring-boot-demo:${{ env.IMAGE_TAG }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
